# alleleforge

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  SPEC.md  SPEC_V2.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
conda/: meta.yaml
docs/: data.md  deployment.md  examples.md  index.md  scope.md
docs/api/: base_editor.md  benchmark.md  cas9.md  cli.md  data.md  designer.md  genome.md  offtarget.md  prime.md  report.md  scoring.md  types.md  variant.md  viz.md  web.md
docs/concepts/: population.md  uncertainty.md
docs/paper/: outline.md  preprint.md
docs/schemas/: AlleleOutcome.schema.json  AncestryOffTarget.schema.json  BaseEditWindow.schema.json  BaseEditor.schema.json  BenchmarkDataset.schema.json  BenchmarkResult.schema.json  CandidateReport.schema.json  ClinVarAccession.schema.json  ClinVarRecord.schema.json  DNASequence.schema.json  DatasetDescriptor.schema.json  DatasetVersion.schema.json  DbSnpId.schema.json  DesignCandidate.schema.json  DesignReport.schema.json  EditOutcome.schema.json  EditStrategy.schema.json  Example.schema.json  Gene.schema.json  GenomicInterval.schema.json  Guide.schema.json  Haplotype.schema.json  LeaderboardEntry.schema.json  ModelCard.schema.json  ModelCheckpoint.schema.json  ModelInfo.schema.json  NickingGuide.schema.json  OffTargetReport.schema.json  OffTargetSite.schema.json  PAM.schema.json  ParsedGenomicHgvs.schema.json  PegRNA.schema.json  PegRNAOligos.schema.json  PopulationFrequency.schema.json  PredictionFloat.schema.json  Provenance.schema.json  RankedMenu.schema.json  RawTarget.schema.json  ResolvedVariant.schema.json  SgRnaOligos.schema.json  (+9 more)
examples/: 01_clinvar_to_design.ipynb  02_population_offtarget.ipynb  03_batch_vcf.ipynb
openspec/: AGENTS.md  project.md
openspec/changes/: README.md
openspec/changes/align-prime-coverage/: proposal.md  tasks.md
openspec/changes/bulletproof-offtarget-nomination/: tasks.md
openspec/changes/complete-provenance/: proposal.md  tasks.md
openspec/changes/compute-honest-uncertainty/: proposal.md  tasks.md
openspec/changes/correct-design-verticals/: proposal.md  tasks.md
openspec/changes/guard-benchmark-integrity/: proposal.md  tasks.md
openspec/changes/guard-cloning-oligos/: proposal.md  tasks.md
openspec/changes/harden-benchmark-reproducibility/: tasks.md
openspec/changes/harden-web-api/: proposal.md  tasks.md
openspec/changes/reconcile-assembly-coordinates/: tasks.md
openspec/changes/ship-published-cfd-matrix/: proposal.md  tasks.md
openspec/changes/validate-oligo-alphabet/: proposal.md  tasks.md
openspec/changes/verify-artifact-integrity/: proposal.md  tasks.md
openspec/specs/base-editor-design/: spec.md
openspec/specs/benchmark-harness/: spec.md
openspec/specs/candidate-ranking/: spec.md
openspec/specs/cas9-design/: spec.md
openspec/specs/cli/: spec.md
openspec/specs/data-registry/: spec.md
openspec/specs/genome-access/: spec.md
openspec/specs/model-zoo/: spec.md
openspec/specs/native-kernels/: spec.md
openspec/specs/offtarget-nomination/: spec.md
openspec/specs/offtarget-scoring/: spec.md
openspec/specs/oligo-output/: spec.md
openspec/specs/prime-editor-design/: spec.md
openspec/specs/provenance-reproducibility/: spec.md
openspec/specs/reporting/: spec.md
openspec/specs/uncertainty-contract/: spec.md
openspec/specs/variant-resolution/: spec.md
openspec/specs/visualization/: spec.md
openspec/specs/web-api/: spec.md
rust/: Cargo.toml  pyproject.toml
rust/src/: bwt.rs  haplotype.rs  kmer.rs  lib.rs  sais.rs
scripts/: calibration_study.py  export_rs3_booster.py  export_schemas.py  figures.py  make_benchmark_fixtures.py  native_speedup.py  reproduce.py  reproduce_golden.json
specs/: base-outcome-integration.md  cas9-outcome-integration.md  cross-check-models-scope.md  distribution-plan.md  model-integration.md  pridict2-integration.md  readiness-assessment.md
src/alleleforge/: __init__.py  _native.py  _version.py  cache.py  config.py
src/alleleforge/benchmark/: README.md  __init__.py  (+7 more)
tests/: test_acceptance.py  test_cache.py  test_calibration_study.py  test_config.py  test_package.py  test_schemas.py
tests/benchmark/: conftest.py  test_cli_bench.py  test_datasets.py  test_generalization.py  test_leaderboard.py  test_metrics.py  test_runner.py  test_splits.py  test_tasks.py
tests/cli/: conftest.py  test_cli.py
tests/data/: __init__.py  conftest.py  test_annotations.py  test_clinvar.py  test_dbsnp.py  test_gnomad.py  test_haplotypes.py  test_io.py  test_registry.py
tests/design/: __init__.py  conftest.py  test_base_editor.py  test_cas9.py  test_cohort.py  test_designer.py  test_prime.py  test_ranking.py  test_routing.py
tests/enumerate/: __init__.py  conftest.py  test_base_editor.py  test_cas9.py  test_prime.py
tests/genome/: conftest.py  test_coordinates.py  test_genome_index.py  test_index.py  test_native.py  test_reference.py
tests/model_zoo/: __init__.py  test_registry.py
tests/offtarget/: __init__.py  conftest.py  test_cache.py  test_cas_offinder.py  test_engine.py  test_haplotype.py  test_haplotype_kernel.py  test_kmer.py  test_population.py  test_reference_bias.py  test_scoring.py  test_search.py
tests/report/: conftest.py  test_builder.py  test_export.py  test_html.py  test_oligos.py  test_pdf.py
tests/scoring/: __init__.py  test_backbone.py  test_backbone_consent.py  test_base.py  test_base_outcome.py  test_cas9_efficiency.py  test_cas9_outcome.py  test_pridict_engine.py  test_prime_efficiency.py  test_prime_outcome.py  test_uncertainty.py
tests/types/: test_candidate_provenance.py  test_edit.py  test_guide.py  test_offtarget.py  test_prediction.py  test_sequence.py  test_variant.py
tests/variant/: __init__.py  conftest.py  test_effect.py  test_hgvs_adapter.py  test_normalization_property.py  test_resolver.py  test_vcf.py
tests/viz/: test_figures.py  test_svg.py
tests/web/: conftest.py  test_api.py  test_jobs.py
(+182 files in other folders)
