[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "alleleforge"
dynamic = ["version"]
description = "Variant-driven, multi-modality, uncertainty-aware CRISPR guide & edit design framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AlleleForge contributors" }]
keywords = ["CRISPR", "gene-editing", "prime-editing", "base-editing", "off-target", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

# Core stays deliberately light so the package installs fast and CI is reliable.
# Heavy scientific / ML / web stacks live in optional groups, pulled in per phase.
# PyYAML is core: the model-zoo license gate reads YAML model cards, and loading
# any model checkpoint requires its card (Phase 6).
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
core = [
    "polars>=0.20",
    "pyarrow>=15",
    "numpy>=1.26",
]
genome = [
    "pyfaidx>=0.8",
    "pysam>=0.22",
    "cyvcf2>=0.30",
    "mappy>=2.26",
    "pyliftover>=0.4",
]
variant = [
    "hgvs>=1.5",
]
cli = [
    "typer>=0.12",
]
ml = [
    "torch>=2.3",
    "transformers>=4.40",
    "lightning>=2.2",
    "scikit-learn>=1.4",
]
# The real trained Rule Set 3 SpCas9-efficiency model. Deliberately separate from
# `ml`: it needs only a modern LightGBM (to run the version-independent text
# booster resolved through the model zoo) plus the upstream `sglearn` featurizer —
# no torch. Kept opt-in so the core install stays light and CI stays weight-free.
cas9-rs3 = [
    "lightgbm>=4",
    "sglearn>=1.2.5",
    "numpy>=1.26",
    "pandas>=2",
]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "hypothesis>=6.100",
    "maturin>=1.5",
    "nbmake>=1.5",
    "ipykernel>=6.29",
]

[project.scripts]
# The CLI command is `aforge` (Phase 12 implements it). Falls back to invoking
# `python -m alleleforge` while the Typer app is being built out.
aforge = "alleleforge.cli.main:app"

[project.urls]
Homepage = "https://github.com/clay-good/alleleforge"
Repository = "https://github.com/clay-good/alleleforge"
Documentation = "https://github.com/clay-good/alleleforge#readme"
Issues = "https://github.com/clay-good/alleleforge/issues"

[tool.hatch.version]
path = "src/alleleforge/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/alleleforge"]

# ---------------------------------------------------------------------------
# Ruff — lint + import sorting + docstring checks on the public API.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
# D203/D213 conflict with D211/D212; pick the modern variants.
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
# Tests and the schema-export script need no public-API docstrings.
"tests/**" = ["D"]
"scripts/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# mypy — strict typing everywhere in src/.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
files = ["src/alleleforge"]

[[tool.mypy.overrides]]
# Optional native extension is built by maturin out-of-tree; ignore if absent.
module = ["aforge_native", "aforge_native.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Genome / variant libraries ship no type stubs / py.typed marker, and the
# heavy tabix/VCF/HGVS/VEP backends are imported lazily and may be absent in
# the lint environment (the data and variant layers parse plain-text fixtures
# in CI and only reach these on a real release).
module = [
    "pyfaidx",
    "pyfaidx.*",
    "pyliftover",
    "pyliftover.*",
    "pysam",
    "pysam.*",
    "cyvcf2",
    "cyvcf2.*",
    "hgvs",
    "hgvs.*",
    "requests",
    "requests.*",
    "yaml",
    "yaml.*",
    "torch",
    "torch.*",
    "transformers",
    "transformers.*",
    "polars",
    "polars.*",
    "lightgbm",
    "lightgbm.*",
    "sglearn",
    "sglearn.*",
    "pandas",
    "pandas.*",
    "criscas",
    "criscas.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest — coverage gate on the library core.
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=alleleforge",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
markers = [
    "real_weights: tests that require downloading real model weights (opt-in, skipped in CI)",
    "native: tests that require the compiled aforge_native extension",
    "live_integration: tests that hit a live external service (VEP/UTA/Cas-OFFinder); opt-in, skipped in CI",
]

[tool.coverage.run]
branch = true
source = ["alleleforge"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
